# Openstair

./: .gitignore  AUDIT.md  LICENSE  PROFILE_DATA.md  QA_RELEASE_CHECKLIST.md  README.md  ROADMAP.md  calculations.py  dxf_export.py  dxf_settings.py  enums.py  main.py  norms.py  profile_library.py  pyproject.toml  report_export.py  requirements.txt  run.sh
.github/workflows/: ci.yml  release-linux.yml
config/: __init__.py  app_settings.py  logging_bootstrap.py
core/: __init__.py  checks.py  geometry.py  loads.py  models.py
data/: default_app_settings.json  profiles_library.csv  profiles_library.json  tread_types.json
export/: __init__.py
export/dxf/: __init__.py  settings.py  side_view.py
packaging/: openstair.desktop
packaging/pyinstaller/: openstair.spec
packaging/scripts/: build-linux-release.sh
tests/: test_enums_norms.py  test_exports.py  test_golden_cases.py  test_profile_library.py  test_serialization.py
ui/: __init__.py  dxf_settings_dialog.py  stair_preview.py
