[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openstair"
version = "0.5.0"
description = "Stahltreppe Vorplanung – DXF/PDF/CSV"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.5,<7",
    "ezdxf>=1.0,<2",
    "reportlab>=4.0,<5",
]

[project.urls]
Repository = "https://github.com/3ddruck12/Openstair"

[project.optional-dependencies]
dev = ["pytest>=7.0,<9", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
